Fixed layout issues

--- a/view_blog.css
+++ b/view_blog.css
@@ -29,6 +29,10 @@ body {
     list-style: none;
 }
 
+.blogInfo {
+    color: black;
+}
+
 .blog {
     text-align: left;
     padding-left: 60px;
